--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,5 @@
 platform = espressif32
 board = m5stack-fire
 framework = arduino
+lib_deps = Adafruit_NeoPixel, M5Stack, NTPClient
+build_flags=-std=gnu++11
