optimization and speed tweaks

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif32
 board = m5stack-fire
 framework = arduino
-lib_deps = Adafruit_NeoPixel, M5Stack, NTPClient
+lib_deps = Adafruit NeoPixel, M5Stack, NTPClient, FastLED, ArduinoFFT
 build_flags=-std=gnu++11
