--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,10 @@
 platform = espressif32
 board = m5stack-fire
 framework = arduino
-lib_deps = Adafruit NeoPixel, M5Stack, NTPClient, FastLED, ArduinoFFT
-build_flags=-std=gnu++11
+lib_deps = M5Stack, FastLED, ArduinoFFT
+
+;[env:m5stack-core-esp32]
+;platform = espressif32
+;board = m5stack-core-esp32
+;framework = arduino
+;lib_deps = M5Stack, FastLED, ArduinoFFT
