--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = m5stack-fire
 framework = arduino
-lib_deps = M5Stack, FastLED, ArduinoFFT
+lib_deps = M5Stack, FastLED, ArduinoFFT, Filters
 
 ;[env:m5stack-core-esp32]
 ;platform = espressif32
