--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = m5stack-fire
 framework = arduino
-lib_deps = M5Stack, FastLED, ArduinoFFT, Filters
+lib_deps = M5Stack, FastLED, ArduinoFFT, Filters, HTTPClient
+
+monitor_speed=115200
 
 ;[env:m5stack-core-esp32]
 ;platform = espressif32
